painter-portfolio/deployment/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
      - name: react-app
        image: hello-world:nanoserver-ltsc2025
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: react-app
spec:
  type: ClusterIP
  selector:
    app: react-app
  ports:
  - port: 80
    targetPort: 80
